# raft-rs

./: .gitignore  Cargo.toml  README.md  psuedocode.md  rustfmt.toml  scratch.md
client/: Cargo.toml
client/src/: cache.rs  cli.rs  client.rs  lib.rs  main.rs
config/: local_3_nodes.json
core/: Cargo.toml
core/src/: lib.rs  raft.rs  state.rs  utils.rs
core/src/networking/: tcp.rs
core/src/node/: background.rs  config.rs  mod.rs
core/src/test/: admin.rs
scripts/: 3node.sh
server/: Cargo.toml
server/src/: main.rs
src/: async_tcp.rs  main.rs  node.rs  raft.rs  server.rs  state.rs  test.rs  transport.rs  utils.rs
src/networking/: async_tcp.rs  client.rs  mod.rs
src/node/: background.rs  config.rs  mod.rs
src/test/: admin.rs  consensus.rs  mod.rs
src/transport/: channel_mock_transport.rs  mod.rs
testing/: Cargo.toml
testing/src/: admin.rs  consensus.rs  lib.rs
