[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.16.0"
rand = "0.8.4"
serde = { version = "1.0.133", features = ["derive"] }
bincode = "1.3.3"
serde_json = "1.0.78"
clap = { version = "3.0.12", features = ["derive"] }
